# photo_augmentation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  prompts.txt  pyproject.toml  requirements.txt
photo_augmentation/: utils.py
photo_augmentation/api/: __init__.py  endpoints.py
photo_augmentation/metrics/: metrics.py
photo_augmentation/models/: detection.py  diffusion.py  segmentation.py  utils.py
